--- a/RedditOnRails/app/views/subs/show.html.erb
+++ b/RedditOnRails/app/views/subs/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @sub.title %></h1>
+<h2><%= @sub.description %></h2>
 
 <% @sub.posts.each do |post| %>
   <p>
@@ -7,6 +8,10 @@
   </p>
 <% end %>
 
+<%= button_to "New Post", new_post_url, method: :get  %>
+<br>
+<%= button_to "Edit #{@sub.title}", edit_sub_url(@sub), method: :get %>
+<br>
 <%= button_to "Delete #{@sub.title}!", sub_url(@sub), method: :delete %>
 <br>
 <%= link_to "<< Back to all subs", subs_url %>
